--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,11 @@ itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.0
 Werkzeug==0.14.1
+Click==7.0
+Flask==1.0.2
+itsdangerous==1.1.0
+Jinja2==2.10
+MarkupSafe==1.1.0
+redis==3.1.0
+rq==0.13.0
+Werkzeug==0.14.1
